# devrig

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  devrig.run.toml  dist-workspace.toml  release-please-config.json
.claude/skills/: agent-browser  screenshot.md
.github/workflows/: ci.yml  release-please.yml  release.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: CommandPalette.tsx  ConfigEditor.tsx  MetricChart.tsx  Sidebar.tsx  StatusBar.tsx
dashboard/src/lib/: api.ts  format.ts  store.ts  theme.ts  ws.ts
dashboard/src/views/: ClusterView.tsx  ConfigView.tsx  Logs.tsx  LogsView.tsx  Metrics.tsx  MetricsView.tsx  Overview.tsx  StatusView.tsx  TraceDetail.tsx  Traces.tsx  TracesView.tsx
docs/: configuration.md
docs/adr/: 001-toml-only.md  002-no-profiles.md  003-isolated-kubeconfig.md  004-compose-interop.md  005-traefik-over-nginx.md  006-in-memory-otel.md  007-agent-browser-testing.md  008-multi-instance-isolation.md
docs/api/: query-cli.md  rest-api.md
docs/architecture/: config-model.md  dependency-graph.md  kubeconfig-isolation.md  multi-instance.md  otel-storage.md  overview.md  service-discovery.md
docs/guides/: claude-code-skill.md  cluster-setup.md  compose-migration.md  configuration.md  contributing.md  getting-started.md
docs/prd/: windows-support.md
e2e/: bunfig.toml  helpers.ts  matchers.d.ts  package-lock.json  package.json  playwright.config.ts  setup.ts  update-readme-hashes.ts
e2e/dashboard/: cmd-k.test.ts  config-editor.test.ts  dark-light.test.ts  logs.test.ts  metrics.test.ts  overview.test.ts  realtime.test.ts  screenshots.test.ts  trace-correlation.test.ts  traces.test.ts
e2e/playwright-report/: index.html
examples/: devrig.toml
examples/demo/: .gitignore  devrig.toml  package.json
examples/demo/api/: index.ts
examples/demo/loadgen/: index.ts
examples/demo/shared/: tracing.ts
examples/demo/web/: index.ts
examples/flux-local/: .gitignore  devrig.toml  setup.sh
examples/flux-local/k8s/: bootstrap.yaml  headlamp-admin.yaml  traefik-config.yaml
examples/telemetry-generator/: package.json
examples/telemetry-generator/src/: index.ts  otlp.ts
pipeline/: biome.json  package.json  tsconfig.json
pipeline/src/: index.ts  log.ts  notify.ts  pipeline.ts  query.ts  types.ts  workspace.ts
pipeline/src/phases/: execute.ts  (+6 more)
skill/claude-code/: SKILL.md
src/: cli.rs  identity.rs  lib.rs  main.rs
src/cluster/: addon.rs  deploy.rs  log_collector.rs  mod.rs  registry.rs  watcher.rs
src/commands/: cluster.rs  doctor.rs  env.rs  exec.rs  init.rs  logs.rs  mod.rs  ps.rs  query.rs  reset.rs  skill.rs  update.rs  validate.rs
src/compose/: bridge.rs  lifecycle.rs  mod.rs
src/config/: diff.rs  interpolate.rs  mod.rs  model.rs  resolve.rs  secrets.rs  validate.rs  watcher.rs
src/dashboard/: mod.rs  server.rs  static_files.rs  ws.rs
src/discovery/: env.rs  mod.rs  url.rs
src/docker/: container.rs  exec.rs  image.rs  log_stream.rs  mod.rs  ready.rs  volume.rs
src/infra/: container.rs  exec.rs  image.rs  mod.rs  network.rs  ready.rs
src/orchestrator/: graph.rs  mod.rs  ports.rs  registry.rs  state.rs  supervisor.rs
src/otel/: mod.rs  query.rs  receiver_grpc.rs  receiver_http.rs  storage.rs  types.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/query/: output.rs
src/ui/: buffer.rs  filter.rs  logs.rs  mod.rs  summary.rs
tests/: integration.rs
tests/common/: mod.rs
tests/integration/: addon_lifecycle.rs  cluster_lifecycle.rs  cluster_network.rs  cluster_registry.rs  completions.rs  compose_interop.rs  config_diff.rs  config_editor.rs  config_file_flag.rs  crash_recovery.rs  dashboard_api.rs  dir_discovery.rs  env_command.rs  infra_lifecycle.rs  init_scripts.rs  label_cleanup.rs  leaked_resources.rs  multi_instance.rs  network_tests.rs  otel_ingest.rs  port_collision.rs  ps_all.rs  ready_checks.rs  reset_command.rs  service_discovery.rs  skill_install.rs  start_stop.rs  validate_command.rs  volume_cleanup.rs
(+29 files in other folders)
