[package]
name = "devrig"
version = "0.1.0"
edition = "2021"
description = "Local development orchestrator"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "io-util", "time", "fs", "sync", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
petgraph = "0.7"
sha2 = "0.10"
hex = "0.4"
nix = { version = "0.29", features = ["signal", "process"] }
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "fmt"] }
anyhow = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
regex = "1"
is-terminal = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bollard = "0.20"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
backon = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

[features]
default = []
integration = []
